Working webpack config

--- a/src/pages/Popup/index.html
+++ b/src/pages/Popup/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <title>xTrade Xtension Homepage</title>
+    <title>xTrade Xtension</title>
   </head>
 
   <body>
